--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Game Jam repo",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "development": "webpack serve --open --config webpack.development.js"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +13,10 @@
     "phaser": "^3.70.0"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
