--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
   "name": "game-jam8",
   "version": "1.0.0",
   "description": "Game Jam repo",
-  "main": "server.js",
+  "main": "dist/index.js",
   "scripts": {
-    "development": "webpack serve --open --config webpack.development.js"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "phaser": "^3.70.0"
-  },
+  "license": "MIT",
+  "type": "module",
   "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^12.0.2",
-    "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "@rollup/plugin-alias": "^5.1.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-replace": "^5.0.5",
+    "@types/node": "^20.11.16",
+    "phaser": "^3.70.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12"
   }
 }
